# cachot

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac
doc/: intro.html  intro.md
doc/adr/: 000-Architectural_Decision_Records.md
include/cachot/: cachot.h  client.h  global.h  object.h  version.h
include/cachot/domain/: actor.h  living_status.h  map.h  object.h  player.h  time.h
include/cachot/server/: account.h  defines.h  info.h  internal.h  server.h  socket_list.h
include/cachot/utils/: logging.h
include/sapphire/: allocation.h  boolean.h  error.h  internal.h  io.h  io_handle.h  io_path.h  numeric.h  posix.h  sapphire.h  str.h  string_buffer.h
src/: Makefile.am
src/cachot/: Makefile.am
src/cachot/domain/: Makefile.am  knowledge.c  player.c
src/cachot/server/: Makefile.am  account.c  knowledge.c  player.c  server.c
src/sapphire/: Makefile.am  allocation.c  io.c  posix.c  string_buffer.c
src/server/: account.c  main.c  server.c
